--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ template: tplMainMiddle
 - Compilers:
     [GNU Compiler Collection (GCC)](https://gcc.gnu.org/),
     [Clang](https://clang.llvm.org/),
-    [Intel C++ Compiler](https://www.intel.com/content/www/us/en/developer/tools/oneapi/toolkits.html)
+    [Intel C++ Compiler](https://www.intel.com/content/www/us/en/developer/tools/oneapi/toolkits.html),
+    [CompilerExplorer](https://godbolt.org/)
 - Text editors/IDE:
     [Vim](https://www.vim.org/),
     [NeoVim](https://neovim.io/),
