--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@ template: tplMainMiddle
 
 ## Content
 1. [Introduction](cpp/introduction.html): context, first program and toolchain.
-1. [Basic syntax](cpp/basic_syntax.html): variables, types, operators, scope, flow control statements, function calls, C preprocessor, ...
-1. [Project presentation](cpp/dualnumbers.html): Dual numbers algebra
-1. [Advanced syntax](cpp/advanced_syntax.html): pointers, memory management, ...
-1. [C++ Standard Library](cpp/stdlib.html): The good way.
-1. [Object-oriented concepts](cpp/objects.html): Encapsulation, inheritance, virtual classes, polymorphism...
+1. [Basic syntax](cpp/basic_syntax.html): variables, types, operators, scope, flow control statements, function calls, ...
+1. [Project presentation](cpp/dualnumbers.html): Dual numbers algebra.
+1. [Memory management](cpp/memory.html): pointers, memory management, ...
+1. [Encapsulation](cpp/encapsulation.html): How to write good and safe codes
+1. [Object-oriented programming](cpp/oop.html): General OOP concepts, C++ implementation.
+1. [Project continuation](cpp/dualnumbers-arrays.html): Dual number arrays.
+1. [Good practices](cpp/goodpractices.html): Documentation and unit testing.
 1. [Templates](cpp/templates.html): A short introduction to metaprogramming.
 1. [Metaprogramming](cpp/metaprogramming.html): A short introduction to metaprogramming.
 
