Bugfix: dualnumber-array row and columns

--- a/cpp/dualnumbers-arrays.html
+++ b/cpp/dualnumbers-arrays.html
@@ -46,7 +46,7 @@ For example, the matrix
 M = \begin{pmatrix} 1 & 2 \\ 3 & 4 \\ 5 & 6\end{pmatrix}
 $$`
 
-has three columns and two rows.
+has two columns and three rows.
 
 When the number of elements in a vector `$v$` is the same as the number of columns
 in a matrix `$M$`, we can multiply them according to
